Simplify contact API and reorganize repo
